# goof-off

./: README.md  build.bat  build.sh  index.html  package.json  pnpm-lock.yaml  start.bat  start.sh
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Greeting.vue  Header.vue  HolidayCountdown.vue  PaydayCountdown.vue  WeekendCountdown.vue
src/styles/: global.css
src/utils/: dateUtils.ts  holidays.ts
