[package]
name = "goof-off"
version = "1.0.0"
description = "摸鱼办温馨提示 - Desktop Widget"
authors = ["you"]
edition = "2021"

[lib]
name = "goof_off_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
